--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
   "name": "vite-template-solid",
+  "type": "module",
   "version": "0.0.0",
   "description": "",
   "scripts": {
     "start": "vite",
     "dev": "vite",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
     "build": "vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
-  "devDependencies": {
-    "solid-devtools": "^0.29.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
-  },
   "dependencies": {
     "solid-js": "^1.8.11"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^9.3.4",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "prettier": "3.2.4",
+    "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-solid": "^2.8.2",
+    "vitest": "^1.2.2"
   }
 }
