--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
     "autoprefixer": "^10.4.17",
+    "happy-dom": "^13.3.8",
     "postcss": "^8.4.33",
     "prettier": "3.2.4",
     "solid-devtools": "^0.29.2",
